--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -1,13 +1,14 @@
 .Chat {
-  border: 1px solid yellow;
   display: flex;
   flex-direction: column;
   height: 100%;
   justify-self: flex-end;
+  padding-top: 5px;
   width: 100%;
 }
 
 .Chat-Messages {
+  border: 1px solid white;
   display: flex;
   flex-direction: column;
   max-height: 100%;
@@ -19,7 +20,8 @@
 }
 
 .Chat-Input {
-  border-top: 1px solid white;
+  border: 1px solid white;
+  border-top: none;
   display: flex;
   flex-direction: row;
   padding: 10px;
